fixed fixed desktop overflowing issue

--- a/wordle-solver/style.css
+++ b/wordle-solver/style.css
@@ -202,6 +202,7 @@ select:focus {
 
     #rows {
         overflow-y: auto;
+        display: block;
     }
     #words {
         height: calc(100svh - var(--menu-height));
